--- a/english/word/simple-word/markdown/p42-p44.md
+++ b/english/word/simple-word/markdown/p42-p44.md
@@ -4,7 +4,7 @@
     - adj. 沉思的，思考的；体贴的，关心的
 - beside
     - prep. 在...旁边
-    - besides 除...之外，还有
+    - besides prep. 除...之外，还有
         - We have lots of thing in common besides music.
 - hospitalization
     - n. 医院治疗
@@ -12,30 +12,30 @@
     - vi. 尖叫声； n. 尖叫
 - steward/stewardess  [ˈstuːərd]  [ˌstjuːəˈdes]
     - n. **男乘务员/女乘务员**；管家
-    - 管家
-        - to serve as responsible stewards of the planet.
+    - to serve as responsible stewards of the planet.
 - hook
     - n. 钩子； vt. 钩住
-    - <u>Since</u>（因为） no baited hooks would have been available to trap them.
+    - <u>Since(因为)</u> no baited hooks would have been available to trap them.
     - 带上hook（钩子），来到brook（小溪），水面look，手拿book，一遍look，开始cook（烹饪）
-- coil
+- coil [kɔɪl]
     - n. 卷，圈
     - Young Jason Stenquist looks flustered by the copper coils.
 - cheese
+    - n. 乳酪、干酪
 - printer
 - breakfast
 - bicycle
     - cycle
     - bike
-- pudding
+- pudding [ˈpʊdɪŋ]
     - n. 布丁
 - beautifully
     - adv. 美好地；漂亮地
 - waiter/waitress
 - aboard
     - prep./adv. 在（船，**飞机**、车）上
-        - He was already aboard the plane.
-    - board n. 木板；**董事会**
+    - He was already aboard the plane.
+    - board n. **董事会**；木板
 - headhunter
     - n. 猎头
 - ours
@@ -44,28 +44,29 @@
     - signature of President
 - dislike
     - vt./n. 不喜欢，厌恶
-    - unlike
+    - unlike prep.
 - willingly
     - adv. 乐意地；乐意地
-- fever
+- fever [ˈfiːvər]
     - n. 发烧，热度；一时的狂热
     - an endless fever of self-celebration
 - gesture
-    - gest- 拿
     - n. 姿势，手势；姿态； v. 打手势
+    - get- 拿
     - He gestured toward his wife and said "She's the talker in our family".
 - candy
     - n. 糖果
 - impossibility
     - n. 不可能性，不可能的事
     - possible adj. 可能的；合理的
-- grassland
+    - impossible
+- grassland [ˈɡræslænd]
     - n. 草原；草地
 - spray  [spreɪ]
     - v. 喷； n. 浪花，水花
 - shark
-    - n. 鲨鱼
-- Bible
+    - n. 鲨鱼，勒索者，诈骗者
+- Bible [ˈbaɪbl]
     - n. 《圣经》
 - voyage  [ˈvɔɪɪdʒ]
     - n./vi. 航行
@@ -76,9 +77,15 @@
     - 坟墓
         - ...some 10 million smokers went to early graves.
     - 严重的；庄重的
-        - There are many <u>caveats</u>（警告） to those figures，but they are still grave.
+        - There are many <u>caveats(警告)</u> to those figures，but they are still grave.
+- painting
+    - n. 绘画; 油画;
+- equity [ˈekwəti]
+    - n. 资产净值; 公平，公正
+- prey [preɪ]
+    - n. 被捕食的动物; 捕食（习性）; 受害者; 受骗者 v. 捕食; 欺凌
 - handsome
-    - adj. 帅气的；**可观的**
+    - adj. **可观的**；帅气的
     - The Fundamental Physics Prize is seen as a handsome reward for researchers.
 - lazy
     - adj. 懒散的
@@ -89,24 +96,25 @@
 - load
     - n. 装载；负担
 - superstar
-- nightmare
+- nightmare [ˈnaɪtmer]
     - n. 噩梦；可怕的事物
 - purse  [pɜːrs]
     - n. 钱包（女用）
+    - 一个 nurse，丢了 purse
 - jacket
     - n. 夹克
 - sixteen
 - congratulate
     - vt. 祝贺（on/upon）
-        - ... your friend Jack wrote an email to congratulate you...
+    - ... your friend Jack wrote an email to congratulate you...
     - gratify 使高兴
     - gratification 高兴
 - regrettable
     - adj. 令人惋惜的；可惜的
     - regret v./n. 后悔
         - I deeply regret what I said.
-    - regrettably  adv. 抱歉地，遗憾地；可悲地
-- rental
+    - regrettably adv. 抱歉地，遗憾地；可悲地
+- rental [ˈrentl]
     - n. 租金
 - china
     - n. 瓷器；瓷
@@ -115,62 +123,62 @@
     - n. 绰号，小名
 - apology
     - n. 道歉，认错
-- herd
+- herd [hɜːrd]
     - n. 兽群，牧群
-    - ...habit rules the <u>unreflecting</u>（反思） herd.
+    - ...habit rules the <u>unreflecting(反思)</u> herd.
 - sow
     - vt. 播种
 - unchanged
     - adj. 不变的
-- infancy  [ˈɪnfənsi]
+- infancy [ˈɪnfənsi]
     - n. 婴儿期；幼儿期
-- tomb  [tuːm]
+- tomb [tuːm]
     - n. 坟墓
 - October
 - thirteen
 - dentist
     - n. 牙医
-- native
+- naive [naɪˈiːv]
     - adj. 幼稚的，天真的
 - limb
     - n. 肢，臂；腿
     - climb 攀爬
-- shake
+- shake [ʃeɪk]
     - n. 摇动；颤抖
-        - shake hands 
+    - shake hands
     - shock 震动
-- rip
+- rip [rɪp]
     - v. 扯破，撕破； n. 裂口
     - Development should be planned，not let rip.
 - remarry
     - v. 再婚
     - marry v. 结婚
         - A married B （vi.）
-        - A and B  were/got married（vi.）
+        - A and B were/got married（vi.）
         - A be married to B
-            - One third of Hispanic woman are married to non-Hispanics. 
+            - One third of Hispanic woman are married to non-Hispanics.
 - magical
-- knot
+- knot [nɑːt]
     - n. 结；v. 打结
     - There are knots to be <u>worked out</u>（解决，处理）.
-- bulb
+- bulb [bʌlb]
     - n. 电灯泡；球状物；球茎
 - posture
     - n. 姿势，姿态 = gesture
     - Human height is conditioned by the upright posture.
-- ecology
+- ecology [iˈkɑːlədʒi]
     - n. 生态，生态学 缩写：eco
         - ecosystem 生态系统
         - ecologist 生态学家
     - economy n. 经济
-- avenue
+- avenue [ˈævənuː]
     - n. 林荫道，大街；方式，方法
     - Each book opens up new avenues of knowledge
-- copper
+- copper [ˈkɑːpər]
     - n. 铜币；铜
 - studio
     - n. 画室，摄影棚
-- voter
+- voter [ˈvoʊtə(r)]
     - n. 投票人，选举人；有选举权的人
     - vote v./n. 投票，选举
     - devote v. 奉献，致力于
@@ -188,13 +196,14 @@
     - Beijing Opera 京剧
 - best
     - well/good - better - best
-- insult
+- insult [ˈɪnsʌlt]
     - vt. 侮辱，凌辱
     - I have never been so insulted in my life.
-- biofuel
+- biofuel ['baɪoʊfjuəl]
     - n. 生物燃料
 - cage
-- newsprint
+    - n. 笼子
+- newsprint [ˈnuzprɪnt]
     - n. 新闻纸；白报纸
 - shoe
     - n. 鞋
@@ -208,7 +217,7 @@
 - downtime
     - n. 停机时间；停工；休息
     - Everyone needs a little downtime.
-- tailor
+- tailor [ˈteɪlər]
     - n. 裁缝； vt. 缝制
     - retail 零售
 - bike
@@ -216,24 +225,25 @@
     - adv. 最近，不久前
 - sportsman
 - appendix  [əˈpendɪks]
-    - ap- 来
     - n. 阑尾；**附录**
+    - ap- 来
 - eater
+    - n. 吃...的人
 - smoker
 - oneself
 - Tuesday
-- weapon
-    - n.武器，并且
+- weapon [ˈwepən]
+    - n. 武器，并且
 - whichever
 - shade
     - n. 阴凉处，荫； vt. 遮蔽，遮光
 - sandal  [ˈsændl]
     - n. 凉鞋
-- concert
+- concert [ˈkɑːnsərt]
+    - n. 音乐会，演奏会
     - cert- 搞清
         - certain 确定的
     - con- 共同
-    - n. 音乐会，演奏会
 - burst
     - vt. 使爆裂；vi. 爆炸
 - wasteland
@@ -241,10 +251,10 @@
 - hate
     - vt./n. 憎恨，不喜欢
 - rainbow
-    - bow- 弯曲
     - 彩虹
+    - bow- 弯曲
 - eighteen
-    - *eleven，twelve，thirteen*，fourteen，*fifteen*，sixteen，seventeen，eighteen，nineteen
+    - *eleven, twelve, thirteen*, fourteen, *fifteen*, sixteen, seventeen, eighteen, nineteen
 - January
 - peaceful
     - adj. 平静的，安宁的
@@ -252,47 +262,46 @@
 - cat
 - airbus
     - n. 空中客车，空中巴士
-- cyber
+- cyber ['saɪbə]
     - adj. 计算机的；信息技术的
-- vacation
-    - vac- 空
-        - evacuate v. 撤离
-        - vacant adj. 空的
-        - vacuum n. 真空；真空吸尘器
+- vacation [veɪˈkeɪʃn]
     - n. 休假，假期
-    - vocation n. 职业，工作
+    - vac- 空
+    - vocation [voʊˈkeɪʃn]
+        - n. 职业，工作
         - voc- 说话
-        - calling 职位，召唤
-        - professional 职业的
+    - calling 职位，召唤
+    - professional 职业的
 - textual  [ˈtekstʃuəl]
     - adj. 文本的，篇章的
 - biology
     - n. 生物学
 - fourteen
-- beard
+- beard [bɪrd]
     - n. 胡须
 - ward
-    - n. 病房；受监护人； v.**保护，避免**（ward off）
+    - v. **保护，避免**(ward off)；n. 病房；受监护人
     - ...to ward off evil influence
 - forgive
     - vt. 原谅；宽恕
 - groundless
     - adj. 无理由的，无根据的
-- zeal
+- zeal [ziːl]
     - n. 热心，热情
     - jealous adj. 嫉妒的
-- treasure
+- treasure [ˈtreʒər]
     - n. 财富； vt. 珍爱
-        - The virgin forest（with Its richness and variety of trees）was a real treasure-house.
+    - The virgin forest (with Its richness and variety of trees) was a real treasure-house.
     - treasury n. 财政部
-- castle
+- castle [ˈkæsl]
     - n. 城堡
     - The sightseers cannot visit the Castle and the Palace separately.
 - pearly
     - adj. 珍珠的
+    - pear
 - shortcoming
     - n. 短处，缺点
-- holy
+- holy [ˈhoʊli]
     - adj. 神圣的，圣洁的
     - holiness n. 神圣
 - bimonthly
