feat: update directory structure of grammar

--- a/english/word/simple-word/markdown/p45-p47.md
+++ b/english/word/simple-word/markdown/p45-p47.md
@@ -8,10 +8,10 @@
     - adj. 喜剧的； n. 喜剧演员
 - roof
     - n. 屋顶，棚
-- poison
+- poison [ˈpɔɪzn]
     - n. 毒药
-    - poisonous adj. 有毒的
-- shine
+    - poisonous [ˈpɔɪzənəs] adj. 有毒的
+- shine [ʃaɪn]
     - vi. 照耀，发光
 - forty
 - repeatedly
@@ -21,151 +21,157 @@
 - unified
     - adj. 统一的
     - unify v. 统一
-- guardian
+- guardian [ˈɡɑːrdiən]
     - n. 保护者；守卫者
 - exciting
+    - adj. 令人激动/兴奋的
     - excited
-- tower
+- tower [ˈtaʊər]
     - n. 塔，高楼
 - lumber
     - n. 木材； vi. 缓慢移动
 - gut
     - n. 勇气；内脏； vt. 取出内脏； adj. 本能的
     - gut feelings 第六感
-- plot
+- plot [plɑːt]
     - n. **情节**；密谋；计划
 - anybody
 - salt
     - n. 盐； vt. 加盐于
-- cosy/cszy
+- cosy/cszy [ˈkoʊzi]
     - adj. 温暖舒适的
-- wordy
+- wordy [ˈwɜrdi]
     - adj. 话多的；冗长的
+- talkative [ˈtɔkətɪv]
+    - adj. 多说话的，多嘴的
 - glue
     - n. 胶水； vt. 粘
-- strawberry
+- strawberry [ˈstrɔːberi]
     - n. 草莓；草莓色
     - blueberry 蓝莓
+    - berry n. 浆果; 莓
 - Wednesday
-- craze
+- craze [krez]
     - n. 狂热；**风行一时的东西**
-        - The  craze is sweeping over Japan.
+    - The craze is sweeping over Japan.
     - crazy adj. 疯狂的
 - mouse
     - n. 老鼠，鼠标；胆小怯懦的人；
     - rat
 - cruelty  [ˈkruːəlti]
     - n. 残忍，残酷，不公
-        - ...demonstrate the cruelty of salary in his days.
+    - ...demonstrate([ˈdemənstreɪt] 证明) the cruelty of slavery([ˈsleɪvəri] 奴隶制) in his days.
     - cruel adj. 残忍的
 - cream
-    - n. 奶油，奶油食品；**精华**；乳霜
-        - The cream of their wit，style，beauty，intellect and lifestyles.
+    - n. **精华**；奶油，奶油食品；乳霜
+    - The cream of their wit(机智), style, beauty, intellect and lifestyles.
     - ice-cream
 - daughter
-- yell
+- yell [jel]
     - vi./n. 大叫，叫喊
 - weekend
-- talktive
-    - adj. 多说话的，多嘴的
-- fond
+- fond [fɑːnd]
     - adj. 喜爱的；充满柔情的
     - be fond of 长期的喜爱
-        - Defenders of the Corporation are fond of quoting the American slogan.
-- taste
+    - Defenders([dɪ'fendəz] 捍卫者) of the corporation <u>are fond of</u> quoting the American slogan.
+- tease [tiːz]
     - vt. 戏弄，取笑
 - teenage
     - adj. 十几岁的，青少年的
-- buck
+- buck [bʌk]
     - n. 雄鹿；美元；纨绔子弟；年轻小伙子；vt. 抵制
     - bang for the buck 划算，合算
-        - The food was excellent and the prices were not too bad，so we got a lot of bang for the buck.
+        - The food was excellent and the prices were not too bad，so we got a lot of <u>bang for the buck<\u>.
     - 抵制
-        - More families buck an older-generation <u>inclination</u>（倾向）.
+        - More families buck an older-generation <u>inclination(倾向)</u>.
 - uncomfortable
     - adj. 令人不舒服的
-- haze
-    - n. 雾，薄雾；霾
+- haze [heɪz]
+    - n. 霾；雾，薄雾
+    - fog
     - foggy adj. 有雾的
 - coat
     - vt. 覆盖，遮盖 n. 上衣，外套
     - cover v. 覆盖
-- patrol  [pəˈtroʊl]
+- patrol [pəˈtroʊl]
     - v./n. 巡逻
 - super
-- roundabout
+- roundabout [ˈraʊndəbaʊt]
     - adj. 迂回的； n. 环岛
 - couch
     - n. 长沙发
     - ...his wife sat silently beside him on the couch.
+    - soft
 - angle
-    - ang- 弯的
     - n. 角度，观点
+    - ang- 弯的
 - shell
-    - n. 壳，贝壳；炮弹； vt. 剥...的壳；炮击
-    - helmet n. 头盔
+    - n. 壳，贝壳；炮弹；vt. 剥...的壳；炮击
+    - helmet [ˈhelmɪt] n. 头盔
 - dust
     - n. 尘土，粉末； vt. 除去...的灰尘
-    - pest n. 害虫
-- strangely
+    - pest [pest] n. 害虫
+- strangely [ˈstrendʒlɪ]
     - adv. 异常地，奇怪地
 - paraphrase  [ˈpærəfreɪz]
     - n. 解释，释义
     - Paragraph n. 段落
 - collector
     - n. 收集者，收取者
-    - collect  v. 收集，收藏
+    - collect v. 收集，收藏
 - workhouse
     - n. 济贫院；救济所
-- breast  [brest]
-    - n. 胸脯，乳房 （女）   
+- breast [brest]
+    - n. 胸脯，乳房 （女）
     - chest 胸膛（男）
 - reconstruction
     - n. 重建，改造；复原
     - construct v. 建造；构造；n. 建筑物
+    - structure n. 结构
 - pizza
     - 比萨饼
 - script
-    - 词根： 写
-    - n. 剧本；广播稿； v. 剧本化，为...写剧本
-    - We have designed jobs that tend to be "tightly scripted" and "highly standardrised" ones.
+    - v. 剧本化，为...写剧本；n. 剧本；广播稿
+    - 词根: 写
+    - We have designed jobs that tend to be "tightly scripted" and "highly standardised" ones.
 - charity
     - n. 慈善事业
-    - Buying gifts or giving to charity is often more pleasurable than purchasing thingsfor oneself.
+    - Buying gifts or giving to charity is often more pleasurable than purchasing things for oneself.
 - proudly
     - adv. 自豪地，得意地
-    - proud  be proud of
-    - pride take pride in
+    - proud: be proud of
+    - pride: take pride in 以...为豪
 - kindness
     - n. 仁慈
 - runway
     - n. 飞机跑道
-- organ
+- organ [ˈɔːrɡən]
     - n. **器官**，机构，风琴
 - flat
-    - adj. **平的，单调的**； n. 公寓套房（apartment）；adv. 直截了当的
+    - adj. **平的，单调的**; n. 公寓套房(apartment); adv. 直截了当的
     - People used to believe the earth was flat.
 - timeline
-- donate
-    - do- 给予
+- donate [ˈdoʊneɪt]
     - v. 捐赠，赠送
-    - Customers may be willing to buy a company's products as an indirect way to donate to the good <u>causes</u>（事业） it helps.
-- edge  [edʒ]
+    - do- 给予
+    - Customers may be willing to buy a company's products as an indirect way to donate to the good <u>causes(事业)</u>
+      it helps.
+- edge [edʒ]
     - n. **边缘**; v. 侧着移动
-- regrettable
+- regrettable [rɪˈɡretəbl]
     - adv. 抱歉地，遗憾地
-- lounge
+- lounge [laʊndʒ]
     - n. **休息室**；v. 闲逛
-- separately
+- separately [ˈsɛpərɪtlɪ]
     - adv. 分别地，单独地
-        - In fact，all of these cultural developments occurred separately.
-    - separate  adj. 分别的，单独的
+    - In fact，all of these cultural developments occurred separately.
+    - separate adj. 分别的，单独的
 - certainty
     - n. 确定
 - unconditional
     - adj. 无条件的；无限制的
     - condition n. 条件
-- dean
+- dean [diːn]
     - n. 教长；学院院长
     - assistant dean 副院长，院长助理
 - housewife
@@ -173,23 +179,25 @@
 - bit
     - n. 一点，一片
     - a bit of 一点
-- receipt
+- receipt [rɪˈsiːt]
     - n. **发票，收据**；收入，收到
     - receive 接收
-- conversational  [ˌkɒnvəˈseɪʃənl]
+- conversational [ˌkɒnvəˈseɪʃənl]
     - adj. 非正式的，交谈的，谈话的
     - Conversational patterns between man and wife are different.
+    - conversation n. 交谈，谈话
 - faithful
     - adj. 忠诚的；如实的；尽职的
-        - faithful partners
+    - faithful partners
     - faith n. 信仰，信念，信任
-    - have/lose faith in 
-        - It more or less lose faith In markets.
-- dropout
+        - have/loose faith in 有/失去...信心
+            - It more or less <u>lose faith in</u> markets.
+    - faithfully adv. 忠实地; 诚心诚意地; 如实地
+- dropout [ˈdrɑːpaʊt]
     - n. 辍学者；退学者
-        - Their grades are lower and their dropout rates are higher.
+    - Their grades are lower and their dropout rates are higher.
     - drop out v. 辍学
-- dullness  [ˈdʌlnəs]
+- dullness [ˈdʌlnəs]
     - n. 顿度；迟钝；无聊
     - Perhaps this is why many worry about the dullness of a jobless future.
 - rightly
@@ -198,44 +206,45 @@
 - May
 - upward
     - adj. 向上的，上升的
-- spare
+- spare [sper]
     - adj. 空闲的，备用的，多余的； vt. 抽出时间，节约，吝啬； n. 备用品
-- cinema
+- cinema [ˈsɪnəmə]
     - n. 电影院；电影；电影业
 - dangerously
     - adv. 危险地；很
-    - He is dangerously ill.
+    - He is dangerously(很) ill.
 - watcher
     - n. ...观察家，观察员
     - star watcher
 - misunderstanding
     - n. 误解，误会
-- astronaut
+- astronaut [ˈæstrənɔːt]
     - n. 宇航员
-- November
+- November [noʊˈvembər]
     - num. 十一月
-- beacon  [ˈbiːkən]
+    - September, October, November, December
+- beacon [ˈbiːkən]
     - n. 灯标，灯塔
-- stripe
-    - n. 条纹
-    - rip n. 裂口，裂纹
-- virgin  [ˈvɜːdʒɪn]
+    - stripe [straɪp]
+        - n. 条纹
+        - rip n. 裂口，裂纹
+- virgin [ˈvɜːdʒɪn]
     - n. 处女，未婚女子；adj. 未经开发的，未经使用的
-        - Virgin Blue 维珍航空
-        - Virginia 弗吉尼亚州
-        - the Virgin May 圣母玛利亚
-        - Virgo 处女座
-    - **virtue** n. 美德，品德
-- bleed
+    - Virgin Blue 维珍航空
+    - Virginia 弗吉尼亚州
+    - the Virgin May 圣母玛利亚
+    - Virgo 处女座
+    - **virtue** [ˈvɜːrtʃuː] n. 美德，品德
+- bleed [bliːd]
     - vi. 出血； vt. 勒索...的钱财
-        - bleed red ink  有严重的经济问题
-        - The <u>U.S. Postal Service</u>（美国邮政局） continues to bleed red ink
-    - blood n. 
+    - bleed red ink 有严重的经济问题
+        - The <u>U.S. Postal Service(美国邮政局)</u> continues to <u>bleed red ink</u>.
+    - blood [blʌd] n.
     - bleed - bled - bled
-- murder
+- murder [ˈmɜːrdər]
     - vt./n. 谋杀，凶杀
     - the Nazi region of murder
-- rumor/rumour
+- rumor/rumour [ˈruːmə(r)]
     - n. 传言；谣言
 - playhouse
     - n. 剧院
@@ -245,19 +254,20 @@
 - negatively
     - adv. 否定地，消极地
     - negative adj. 消极的，否定的
-- empire
+- empire [ˈempaɪər]
     - n. 帝国
-- poem
+- poem [ˈpoʊəm]
     - n. 诗
     - His poems have been compared to those of the English Romantic.
-    - poet n. 诗人
-- excitement
+    - poet [ˈpoʊət] n. 诗人
+- excitement [ɪkˈsaɪtmənt]
     - n. 激动，兴奋
-- quantitative
+- quantitative [ˈkwɑːntəteɪtɪv]
     - adj. 量的，定量的
         - We need to do some quantitative analysis of the drugs
     - quantity n. 数量
-- genre  [ˈʒɑːnrə]
+    - quality n. 质量
+- genre [ˈʒɑːnrə]
     - n. 文体，类型，体裁
     - The study of genre has experienced three periods.
 - earner
@@ -265,7 +275,7 @@
 - eleven
 - newsstand
     - n. 报摊，杂志摊
-- graph
+- graph [ɡræf]
     - n. 图表；曲线图
     - line graph 线状图
     - pie graph 饼状图
@@ -273,47 +283,49 @@
 - wine
     - n. 葡萄酒
     - wine berry = grape 葡萄
-- pace
+- peace
 - birthday
-- clerk
+- clerk [klɜːrk]
     - n. 店员，办事员
-- cattle
+- cattle [ˈkætl]
     - n. 牛
     - bull n. 公牛
     - cow n. 母牛
     - milk cow 奶牛
-- richly
+- richly [ˈrɪtʃli]
     - adv. 富丽堂皇对，色彩鲜艳富丽地；口味醇美地；气味浓郁芬芳地
+    - rich
 - session
-    - sit + question
     - n. 会议，开庭；学期
-        - You are going to host a club reading session.
-    - meeting （非正式）会议
+    - You are going to host a club reading session.
+    - sit + question
+    - meeting (非正式)会议
 - goodness
     - n. 善良，美德，好意
-- sexual  [ˈsekʃuəl]
+- sexual [ˈsekʃuəl]
     - adj. 性行为的，性的
 - frankly
     - adv. 坦诚地，坦率对
     - They frankly dislike the RSC's actors...
-- hat
+- hat [hæt]
     - n. 帽子
 - kit
     - n. 成套工具
-- painter
+- painter [ˈpeɪntər]
     - n. 画家；油漆匠
-- bunch
+- bunch [bʌntʃ]
     - n. **群，束，捆**； vi. 挤在一起； vi. 使成一束
-    - a bunch of flower 一束花
+    - <u>a bunch of</u> flower 一束花
     - 挤在一起
         - His muscles bunched under his shirt.
 - outdoors
     - adv. 在户外
 - streetlight
-- seasonal
+    - n. 路灯
+- seasonal [ˈsiːzənl]
     - adj. 季节性的，随季节变化的
-    - season n. 季节；时期； vt. 给...调味
-- recycling
+    - season [ˈsiːzn] n. 季节；时期； vt. 给...调味
+- recycling [ˌri'saɪklɪŋ]
     - n. 回收利用
-    - ...ensuring recycling is at least <u>as easy as</u>（至少） <u>trash disposal.</u>（废物处理）
-- April
+    - ...ensuring recycling is at least <u>as easy as(至少)</u> <u>trash disposal(废物处理)</u>.
+- April [ ˈeɪprəl]
