--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -25,7 +25,7 @@ places you would like to visit.<br>
 Dear friends,<br>
 &emsp;&emsp;&emsp;&emsp;On behalf of the Students' Union of Beijing Foreign Studies University, I would like to extend
 our heartfelt welcome to all the overseas students who will study in our university.<br>
-&emsp;&emsp;&emsp;&emsp;It is my great pleasure to offer you several practical suggestions. In the first place, life is
+&emsp;&emsp;&emsp;&emsp;It is my great pleasure to offer you several practical suggestions. In the first place, life in
 this prestigious university is perhaps not as easy as you have expected. You may be tightly bound by daily classes,
 abundant homework and frequent exams. Thus, be prepared for the hectic life here. In the second place, in spite of all
 those burdens, various extracurricular activities such as sports meets, speech contests and social gatherings will still
