--- a/english/word/simple-word/markdown/p42-p44.md
+++ b/english/word/simple-word/markdown/p42-p44.md
@@ -5,21 +5,21 @@
 - beside
     - prep. 在...旁边
     - besides prep. 除...之外，还有
-        - We have lots of thing in common besides music.
+        - We have lots of <u>thing in common(共同点)</u> besides music.
 - hospitalization
     - n. 医院治疗
 - scream
     - vi. 尖叫声； n. 尖叫
 - steward/stewardess  [ˈstuːərd]  [ˌstjuːəˈdes]
     - n. **男乘务员/女乘务员**；管家
-    - to serve as responsible stewards of the planet.
+    - to serve as responsible stewards of the planet(行星).
 - hook
     - n. 钩子； vt. 钩住
-    - <u>Since(因为)</u> no baited hooks would have been available to trap them.
-    - 带上hook（钩子），来到brook（小溪），水面look，手拿book，一遍look，开始cook（烹饪）
+    - <u>Since(因为)</u> no baited(诱饵) hooks would have been available to trap them.
+    - 带上hook（钩子），来到brook(小溪)，水面look，手拿book，一边look，开始cook(烹饪)
 - coil [kɔɪl]
     - n. 卷，圈
-    - Young Jason Stenquist looks flustered by the copper coils.
+    - Young Jason Stenquist looks flustered(慌张) by the copper(铜币) coils.
 - cheese
     - n. 乳酪、干酪
 - printer
@@ -39,21 +39,24 @@
 - headhunter
     - n. 猎头
 - ours
-- signature  [ˈsɪɡnətʃər]
+- signature [ˈsɪɡnətʃər]
     - n. 签名，署名
     - signature of President
 - dislike
     - vt./n. 不喜欢，厌恶
     - unlike prep.
 - willingly
-    - adv. 乐意地；乐意地
+    - adv. 乐意地
 - fever [ˈfiːvər]
     - n. 发烧，热度；一时的狂热
-    - an endless fever of self-celebration
+    - an endless fever of self-celebration 对自我庆祝/炫耀的无尽狂热
 - gesture
     - n. 姿势，手势；姿态； v. 打手势
     - get- 拿
     - He gestured toward his wife and said "She's the talker in our family".
+- posture
+    - n. 姿势，姿态 = gesture
+    - Human height is conditioned by the upright posture.
 - candy
     - n. 糖果
 - impossibility
@@ -62,8 +65,10 @@
     - impossible
 - grassland [ˈɡræslænd]
     - n. 草原；草地
-- spray  [spreɪ]
+- spray [spreɪ]
     - v. 喷； n. 浪花，水花
+- prey [preɪ]
+    - n. 被捕食的动物; 捕食（习性）; 受害者; 受骗者 v. 捕食; 欺凌
 - shark
     - n. 鲨鱼，勒索者，诈骗者
 - Bible [ˈbaɪbl]
@@ -77,13 +82,13 @@
     - 坟墓
         - ...some 10 million smokers went to early graves.
     - 严重的；庄重的
-        - There are many <u>caveats(警告)</u> to those figures，but they are still grave.
+        - There are many <u>caveats([ˈkeviˌæt] 警告)</u> to those figures([ˈfɪɡjər] 数字)，but they are still grave.
+- tomb [tuːm]
+    - n. 坟墓
 - painting
     - n. 绘画; 油画;
 - equity [ˈekwəti]
     - n. 资产净值; 公平，公正
-- prey [preɪ]
-    - n. 被捕食的动物; 捕食（习性）; 受害者; 受骗者 v. 捕食; 欺凌
 - handsome
     - adj. **可观的**；帅气的
     - The Fundamental Physics Prize is seen as a handsome reward for researchers.
@@ -118,7 +123,7 @@
     - n. 租金
 - china
     - n. 瓷器；瓷
-    - We now take our English "on paper plates instead of china".
+    - We now take our English "on paper plates(盘子) instead of china".
 - nickname
     - n. 绰号，小名
 - apology
@@ -126,14 +131,12 @@
 - herd [hɜːrd]
     - n. 兽群，牧群
     - ...habit rules the <u>unreflecting(反思)</u> herd.
-- sow
+- sow [soʊ]
     - vt. 播种
 - unchanged
     - adj. 不变的
 - infancy [ˈɪnfənsi]
     - n. 婴儿期；幼儿期
-- tomb [tuːm]
-    - n. 坟墓
 - October
 - thirteen
 - dentist
@@ -146,7 +149,7 @@
 - shake [ʃeɪk]
     - n. 摇动；颤抖
     - shake hands
-    - shock 震动
+    - shock [ʃɑːk] 震动
 - rip [rɪp]
     - v. 扯破，撕破； n. 裂口
     - Development should be planned，not let rip.
@@ -160,12 +163,9 @@
 - magical
 - knot [nɑːt]
     - n. 结；v. 打结
-    - There are knots to be <u>worked out</u>（解决，处理）.
+    - There are knots to be <u>worked out(解决，处理)</u>.
 - bulb [bʌlb]
     - n. 电灯泡；球状物；球茎
-- posture
-    - n. 姿势，姿态 = gesture
-    - Human height is conditioned by the upright posture.
 - ecology [iˈkɑːlədʒi]
     - n. 生态，生态学 缩写：eco
         - ecosystem 生态系统
@@ -185,9 +185,9 @@
 - ear
 - girlhood
     - n. 少女时期
-- metal
+- metal [ˈmetl]
     - n. 金属
-    - medal n. 奖牌
+    - medal [ˈmedl] n. 奖牌
 - log
     - n. 原木，木料； 航海日志；vt. 正式记录
     - log in 登录
@@ -205,10 +205,10 @@
     - n. 笼子
 - newsprint [ˈnuzprɪnt]
     - n. 新闻纸；白报纸
-- shoe
+- shoe [ʃuː]
     - n. 鞋
     - Put yourself in others' shoes. 站在别人立场
-- dawn  [dɔːn]
+- dawn [dɔːn]
     - n. 黎明，拂晓；开端，开始； v. 破晓；开始；出现
     - 开始
         - dawn of civilization 文明的开始
@@ -224,7 +224,7 @@
 - lately
     - adv. 最近，不久前
 - sportsman
-- appendix  [əˈpendɪks]
+- appendix [əˈpendɪks]
     - n. 阑尾；**附录**
     - ap- 来
 - eater
@@ -242,9 +242,10 @@
 - concert [ˈkɑːnsərt]
     - n. 音乐会，演奏会
     - cert- 搞清
-        - certain 确定的
+        - certain [ˈsɜːrtn] 确定的
     - con- 共同
-- burst
+    - corner n. 角，角落;
+- burst  [bɜːrst]
     - vt. 使爆裂；vi. 爆炸
 - wasteland
     - n. 荒地
@@ -254,7 +255,7 @@
     - 彩虹
     - bow- 弯曲
 - eighteen
-    - *eleven, twelve, thirteen*, fourteen, *fifteen*, sixteen, seventeen, eighteen, nineteen
+    - *eleven, twelve([twelv]), thirteen*, fourteen, *fifteen*, sixteen, seventeen, eighteen, nineteen
 - January
 - peaceful
     - adj. 平静的，安宁的
@@ -272,31 +273,32 @@
         - voc- 说话
     - calling 职位，召唤
     - professional 职业的
-- textual  [ˈtekstʃuəl]
+- textual [ˈtekstʃuəl]
     - adj. 文本的，篇章的
 - biology
     - n. 生物学
 - fourteen
 - beard [bɪrd]
     - n. 胡须
-- ward
+- ward [wɔːrd]
     - v. **保护，避免**(ward off)；n. 病房；受监护人
     - ...to ward off evil influence
+    - word [wɜːrd]
 - forgive
     - vt. 原谅；宽恕
 - groundless
     - adj. 无理由的，无根据的
 - zeal [ziːl]
     - n. 热心，热情
-    - jealous adj. 嫉妒的
+    - jealous [ˈdʒeləs] adj. 嫉妒的
 - treasure [ˈtreʒər]
     - n. 财富； vt. 珍爱
-    - The virgin forest (with Its richness and variety of trees) was a real treasure-house.
+    - The virgin forest (with its richness and variety of trees) was a real treasure-house.
     - treasury n. 财政部
 - castle [ˈkæsl]
     - n. 城堡
-    - The sightseers cannot visit the Castle and the Palace separately.
-- pearly
+    - The sightseers([ˈsaɪtsɪr] n. 观光客，游客) cannot visit the Castle and the Palace separately.
+- pearly [ˈpɜrli]
     - adj. 珍珠的
     - pear
 - shortcoming
