feat: add 016 write

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -187,7 +187,17 @@ Dear Mr. Snakespeare,<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
 
+## 016
+
+Dear Sir or Madam,<br>
+&emsp;&emsp;&emsp;&emsp;I am sorry to say that I will not be able to attend the interview at 10:00 a.m. on Monday, December 15, 2025.<br>
+&emsp;&emsp;&emsp;&emsp;Unfortunately, I have recently been diagnosed with a serious ear infection which will require surgery on the same day as our interview. If passible, I woule like to postpone the interview to another day later in the week. I promise that such a situation does not usually happen, and apologize for any inconvenience this may cause you.<br>
+&emsp;&emsp;&emsp;&emsp;I am looking forward to hearing from you and, again, am sorry for any trouble this may have caused. Please excuse me for not being able to inform you of my situation sooner.<br>
+
+<p align="right">Yoursincerely,</p>
+<p align="right">Li Ming</p>
 
 <p align="right"></p>
 <p align="right"></p>
+
 
