--- a/english/word/simple-word/markdown/p39-p41.md
+++ b/english/word/simple-word/markdown/p39-p41.md
@@ -3,7 +3,7 @@
 - relaxation
     - n. 放松，消遣
 - mask
-    - n. 面具，面罩；伪装； vt. 用面具遮住，遮盖
+    - n. 面具，面罩；伪装；vt. 用面具遮住，遮盖
     - face mask 口罩
     - 遮盖
         - Presentation masked the fact.
@@ -70,7 +70,7 @@
 - comedy  [ˈkɑːmədi]
     - n. 喜剧；滑稽，诙谐
     - ...under the <u>incentive([ɪnˈsentɪv] 驱动)</u> of classical tragedy([ˈtrædʒədi] 悲剧) and comedy.
-- tragedy  [ˈtrædʒədig]
+- tragedy  [ˈtrædʒədi]
   - n. 惨事，悲剧
 - golf
     - n. 高尔夫球运动
@@ -130,7 +130,7 @@
     - disinfecting([ˌdɪsɪnˈfɛkt]) wipes 消毒湿巾
 - adjective
     - n. 形容词
-- chamber  [ˈtʃeɪmbə(r)]
+- chamber [ˈtʃeɪmbə(r)]
     - n. 会议室；房间
     - Two monkeys were placed in separate([ˈsepəreɪt] 分离) but adjoining([əˈdʒɔɪnɪŋ] 毗邻) chambers.
 - ink
@@ -209,6 +209,7 @@
 - sing
 - meantime
     - adv. 其间，其时
+    - meanwhile adv. 同时; 在此期间; 与之相比
 - uneasy
     - adj. 不安的；担心的
 - February [ˈfebrueri]
