--- a/english/word/simple-word/markdown/p45-p47.md
+++ b/english/word/simple-word/markdown/p45-p47.md
@@ -4,7 +4,7 @@
     - adv. 均匀地；有规律地；平滑地
 - honestly
     - adv. 诚实地；正当地
-- comic  [ˈkɑːmɪk]
+- comic [ˈkɑːmɪk]
     - adj. 喜剧的； n. 喜剧演员
 - roof
     - n. 屋顶，棚
@@ -18,7 +18,7 @@
     - adv. 一再，再三
 - downhill
     - adv. 向山下，向下
-- unified
+- unified ['junɪfaɪd]
     - adj. 统一的
     - unify v. 统一
 - guardian [ˈɡɑːrdiən]
@@ -30,11 +30,12 @@
     - n. 塔，高楼
 - lumber
     - n. 木材； vi. 缓慢移动
-- gut
+- gut [ɡʌt] 
     - n. 勇气；内脏； vt. 取出内脏； adj. 本能的
     - gut feelings 第六感
 - plot [plɑːt]
     - n. **情节**；密谋；计划
+    - slot
 - anybody
 - salt
     - n. 盐； vt. 加盐于
@@ -54,7 +55,7 @@
 - craze [krez]
     - n. 狂热；**风行一时的东西**
     - The craze is sweeping over Japan.
-    - crazy adj. 疯狂的
+    - crazy [ˈkreɪzi] adj. 疯狂的
 - mouse
     - n. 老鼠，鼠标；胆小怯懦的人；
     - rat
@@ -76,7 +77,7 @@
     - Defenders([dɪ'fendəz] 捍卫者) of the corporation <u>are fond of</u> quoting the American slogan.
 - tease [tiːz]
     - vt. 戏弄，取笑
-- teenage
+- teenage [ˈtiːneɪdʒ]
     - adj. 十几岁的，青少年的
 - buck [bʌk]
     - n. 雄鹿；美元；纨绔子弟；年轻小伙子；vt. 抵制
@@ -90,7 +91,7 @@
     - n. 霾；雾，薄雾
     - fog
     - foggy adj. 有雾的
-- coat
+- coat [koʊt]
     - vt. 覆盖，遮盖 n. 上衣，外套
     - cover v. 覆盖
 - patrol [pəˈtroʊl]
@@ -115,7 +116,7 @@
     - adv. 异常地，奇怪地
 - paraphrase  [ˈpærəfreɪz]
     - n. 解释，释义
-    - Paragraph n. 段落
+    - paragraph n. 段落
 - collector
     - n. 收集者，收取者
     - collect v. 收集，收藏
@@ -154,8 +155,7 @@
 - donate [ˈdoʊneɪt]
     - v. 捐赠，赠送
     - do- 给予
-    - Customers may be willing to buy a company's products as an indirect way to donate to the good <u>causes(事业)</u>
-      it helps.
+    - Customers may be willing to buy a company's products as an indirect way to donate to the good <u>causes(事业)</u> it helps.
 - edge [edʒ]
     - n. **边缘**; v. 侧着移动
 - regrettable [rɪˈɡretəbl]
@@ -166,7 +166,7 @@
     - adv. 分别地，单独地
     - In fact，all of these cultural developments occurred separately.
     - separate adj. 分别的，单独的
-- certainty
+- certainty [ˈsɜːrtnti]
     - n. 确定
 - unconditional
     - adj. 无条件的；无限制的
@@ -264,7 +264,7 @@
     - n. 激动，兴奋
 - quantitative [ˈkwɑːntəteɪtɪv]
     - adj. 量的，定量的
-        - We need to do some quantitative analysis of the drugs
+    - We need to do some quantitative analysis of the drugs
     - quantity n. 数量
     - quality n. 质量
 - genre [ˈʒɑːnrə]
@@ -305,7 +305,7 @@
 - sexual [ˈsekʃuəl]
     - adj. 性行为的，性的
 - frankly
-    - adv. 坦诚地，坦率对
+    - adv. 坦诚地，坦率的
     - They frankly dislike the RSC's actors...
 - hat [hæt]
     - n. 帽子
@@ -328,4 +328,4 @@
 - recycling [ˌri'saɪklɪŋ]
     - n. 回收利用
     - ...ensuring recycling is at least <u>as easy as(至少)</u> <u>trash disposal(废物处理)</u>.
-- April [ ˈeɪprəl]
+- April [ˈeɪprəl]
