feat: non-finite-verb as subject, object and predicative

--- a/english/word/simple-word/markdown/p42-p44.md
+++ b/english/word/simple-word/markdown/p42-p44.md
@@ -2,7 +2,7 @@
 
 - thoughtful
     - adj. 沉思的，思考的；体贴的，关心的
-- beside
+- beside [bɪˈsaɪd]
     - prep. 在...旁边
     - besides prep. 除...之外，还有
         - We have lots of <u>thing in common(共同点)</u> besides music.
@@ -13,13 +13,13 @@
 - steward/stewardess  [ˈstuːərd]  [ˌstjuːəˈdes]
     - n. **男乘务员/女乘务员**；管家
     - to serve as responsible stewards of the planet(行星).
-- hook
+- hook [hʊk]
     - n. 钩子； vt. 钩住
     - <u>Since(因为)</u> no baited(诱饵) hooks would have been available to trap them.
     - 带上hook（钩子），来到brook(小溪)，水面look，手拿book，一边look，开始cook(烹饪)
 - coil [kɔɪl]
     - n. 卷，圈
-    - Young Jason Stenquist looks flustered(慌张) by the copper(铜币) coils.
+    - Young Jason Stenquist looks flustered([ˈflʌstər] 慌张) by the copper(铜币) coils.
 - cheese
     - n. 乳酪、干酪
 - printer
@@ -42,6 +42,7 @@
 - signature [ˈsɪɡnətʃər]
     - n. 签名，署名
     - signature of President
+    - significant adj. 重要的; 显著的; 意味深长的
 - dislike
     - vt./n. 不喜欢，厌恶
     - unlike prep.
@@ -69,7 +70,7 @@
     - v. 喷； n. 浪花，水花
 - prey [preɪ]
     - n. 被捕食的动物; 捕食（习性）; 受害者; 受骗者 v. 捕食; 欺凌
-- shark
+- shark [ʃɑːrk]
     - n. 鲨鱼，勒索者，诈骗者
 - Bible [ˈbaɪbl]
     - n. 《圣经》
@@ -85,7 +86,7 @@
         - There are many <u>caveats([ˈkeviˌæt] 警告)</u> to those figures([ˈfɪɡjər] 数字)，but they are still grave.
 - tomb [tuːm]
     - n. 坟墓
-- painting
+- painting [ˈpeɪntɪŋ]
     - n. 绘画; 油画;
 - equity [ˈekwəti]
     - n. 资产净值; 公平，公正
@@ -98,6 +99,7 @@
     - n. 魔术；魔力； adj. 有魔力的
     - magical adj. 有魔力的；用于巫术的
     - magazine n. 杂志
+    - journal n. 杂志
 - load
     - n. 装载；负担
 - superstar
@@ -121,6 +123,7 @@
     - regrettably adv. 抱歉地，遗憾地；可悲地
 - rental [ˈrentl]
     - n. 租金
+    - rent vt. 租借，租用；出租 n. 租金
 - china
     - n. 瓷器；瓷
     - We now take our English "on paper plates(盘子) instead of china".
@@ -166,6 +169,7 @@
     - There are knots to be <u>worked out(解决，处理)</u>.
 - bulb [bʌlb]
     - n. 电灯泡；球状物；球茎
+    - bubble [ˈbʌbl] n. 泡泡，水泡
 - ecology [iˈkɑːlədʒi]
     - n. 生态，生态学 缩写：eco
         - ecosystem 生态系统
@@ -225,7 +229,7 @@
     - adv. 最近，不久前
 - sportsman
 - appendix [əˈpendɪks]
-    - n. 阑尾；**附录**
+    - n. **附录**；阑尾
     - ap- 来
 - eater
     - n. 吃...的人
