--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -1,5 +1,5 @@
 ## 041
 
 &emsp;&emsp;From the information given in the above column chart, we can see a striking contrast between developing and developed countries in mobile-phone subscriptions from 2000 to 2008. During this period, there has been a dramatic increase from 0.4 to 4 billion mobile-phone subscriptions in developing countries, while those of developed countries remained steady at just under 1 billion.<br>
-&emsp;&emsp;At least two fundamental factors could have contributed to this phenomenon. On the one hand, with the rapid increase in economic development happening in developing countries, the telecommunication industry in those countries has expanded greatly to meet the demand of globalization. As a result, the user bas of mobile phones which can narrow the distance between people and link the whole world together, grew at an incredible speed. On the other hand, the extremely advanced economy of developed countries means less potential in many aspects and their demand for further enlargement tends to saturate.<br>
+&emsp;&emsp;At least two fundamental factors could have contributed to this phenomenon. On the one hand, with the rapid increase in economic development happening in developing countries, the telecommunication industry in those countries has expanded greatly to meet the demand of globalization. As a result, the user base of mobile phones which can narrow the distance between people and link the whole world together, grew at an incredible speed. On the other hand, the extremely advanced economy of developed countries means less potential in many aspects and their demand for further enlargement tends to saturate.<br>
 &emsp;&emsp;Although the fact remains that phones are already extremely prevalent in both developing and developed countries, the growing gap will continue to widen in the future. Therefore, mobile phone manufacturers should pay more attention to the market in developing countries.<br>
